# NetsBlox-to-Netlogo

./: .gitignore  Cargo.toml  README.md
examples/: example.nlogo  flocking.nlogo  hodgepodge.nlogo
src/: grammar.lalrpop  lib.rs  main.rs  nl2xml.rs  util.rs  xml2nl.rs
src/common/: false-globals.txt  globals.txt  mod.rs  patch-prop-renames.txt  reserved.txt
src/nl2xml/: ast.rs  builtin-patch-props.txt  builtins.txt  globals.txt  grammar.lalrpop  mod.rs  readonly-builtins.txt  suggestions.txt  template.xml
src/xml2nl/: builtin_blocks.txt  mod.rs
